chore: deep-crusier theme update

--- a/index.html
+++ b/index.html
@@ -402,16 +402,16 @@ div.hint {
 <g id="node6" class="node">
 <title>src/services/ImportRegistry/index.ts</title>
 <g id="a_node6"><a xlink:href="src/services/ImportRegistry/index.ts" xlink:title="index.ts">
-<polygon fill="#ddfeff" stroke="#607d8b" stroke-width="1.2" points="1289,-397 1235,-397 1235,-379 1289,-379 1289,-397"/>
-<text text-anchor="start" x="1243.5" y="-385.8" font-family="Helvetica,sans-Serif" font-size="9.00" fill="#607d8b">index.ts</text>
+<polygon fill="#ffa726" stroke="#607d8b" stroke-width="1.2" points="1289,-397 1235,-397 1235,-379 1289,-379 1289,-397"/>
+<text text-anchor="start" x="1243.5" y="-385.8" font-family="Helvetica,sans-Serif" font-size="9.00">index.ts</text>
 </a>
 </g>
 </g>
 <!-- src/classses/Lax/index.test.ts&#45;&gt;src/services/ImportRegistry/index.ts -->
 <g id="edge4" class="edge">
 <title>src/classses/Lax/index.test.ts&#45;&gt;src/services/ImportRegistry/index.ts</title>
-<path fill="none" stroke="#cfd8dc" d="M481.61,-920C642.42,-920 1278.2,-920 1278.2,-920 1278.2,-920 1278.2,-402.23 1278.2,-402.23"/>
-<polygon fill="#cfd8dc" stroke="#cfd8dc" points="1278.2,-397.23 1280.45,-402.23 1278.2,-399.73 1278.2,-402.23 1278.2,-402.23 1278.2,-402.23 1278.2,-399.73 1275.95,-402.23 1278.2,-397.23 1278.2,-397.23"/>
+<path fill="none" stroke="#ffa726" d="M481.61,-920C642.42,-920 1278.2,-920 1278.2,-920 1278.2,-920 1278.2,-402.23 1278.2,-402.23"/>
+<polygon fill="#ffa726" stroke="#ffa726" points="1278.2,-397.23 1280.45,-402.23 1278.2,-399.73 1278.2,-402.23 1278.2,-402.23 1278.2,-402.23 1278.2,-399.73 1275.95,-402.23 1278.2,-397.23 1278.2,-397.23"/>
 </g>
 <!-- src/classses/Lax/index.ts&#45;&gt;src/classses/Abstract/index.ts -->
 <g id="edge5" class="edge">
@@ -587,8 +587,8 @@ div.hint {
 <!-- src/classses/Strict/index.test.ts&#45;&gt;src/services/ImportRegistry/index.ts -->
 <g id="edge12" class="edge">
 <title>src/classses/Strict/index.test.ts&#45;&gt;src/services/ImportRegistry/index.ts</title>
-<path fill="none" stroke="#cfd8dc" d="M365.67,-850.84C365.67,-842.01 365.67,-830 365.67,-830 365.67,-830 1267.4,-830 1267.4,-830 1267.4,-830 1267.4,-402.23 1267.4,-402.23"/>
-<polygon fill="#cfd8dc" stroke="#cfd8dc" points="1267.4,-397.23 1269.65,-402.23 1267.4,-399.73 1267.4,-402.23 1267.4,-402.23 1267.4,-402.23 1267.4,-399.73 1265.15,-402.23 1267.4,-397.23 1267.4,-397.23"/>
+<path fill="none" stroke="#ffa726" d="M365.67,-850.84C365.67,-842.01 365.67,-830 365.67,-830 365.67,-830 1267.4,-830 1267.4,-830 1267.4,-830 1267.4,-402.23 1267.4,-402.23"/>
+<polygon fill="#ffa726" stroke="#ffa726" points="1267.4,-397.23 1269.65,-402.23 1267.4,-399.73 1267.4,-402.23 1267.4,-402.23 1267.4,-402.23 1267.4,-399.73 1265.15,-402.23 1267.4,-397.23 1267.4,-397.23"/>
 </g>
 <!-- src/classses/Strict/index.ts -->
 <g id="node11" class="node">
@@ -1088,8 +1088,8 @@ div.hint {
 <!-- src/utils/templater/either/index.ts&#45;&gt;src/services/ImportRegistry/index.ts -->
 <g id="edge68" class="edge">
 <title>src/utils/templater/either/index.ts&#45;&gt;src/services/ImportRegistry/index.ts</title>
-<path fill="none" stroke="#cfd8dc" d="M791.19,-649C894.45,-649 1256.6,-649 1256.6,-649 1256.6,-649 1256.6,-402.29 1256.6,-402.29"/>
-<polygon fill="#cfd8dc" stroke="#cfd8dc" points="1256.6,-397.29 1258.85,-402.29 1256.6,-399.79 1256.6,-402.29 1256.6,-402.29 1256.6,-402.29 1256.6,-399.79 1254.35,-402.29 1256.6,-397.29 1256.6,-397.29"/>
+<path fill="none" stroke="#ffa726" d="M791.19,-649C894.45,-649 1256.6,-649 1256.6,-649 1256.6,-649 1256.6,-402.29 1256.6,-402.29"/>
+<polygon fill="#ffa726" stroke="#ffa726" points="1256.6,-397.29 1258.85,-402.29 1256.6,-399.79 1256.6,-402.29 1256.6,-402.29 1256.6,-402.29 1256.6,-399.79 1254.35,-402.29 1256.6,-397.29 1256.6,-397.29"/>
 </g>
 <!-- src/utils/templater/either/index.ts&#45;&gt;src/utils/parseTypeDeclarations/index.ts -->
 <g id="edge70" class="edge">
@@ -1124,8 +1124,8 @@ div.hint {
 <!-- src/utils/templater/typeBuilder/relaxConstraints.ts&#45;&gt;src/services/ImportRegistry/index.ts -->
 <g id="edge81" class="edge">
 <title>src/utils/templater/typeBuilder/relaxConstraints.ts&#45;&gt;src/services/ImportRegistry/index.ts</title>
-<path fill="none" stroke="#cfd8dc" d="M960.64,-478C1054.45,-478 1245.8,-478 1245.8,-478 1245.8,-478 1245.8,-402.29 1245.8,-402.29"/>
-<polygon fill="#cfd8dc" stroke="#cfd8dc" points="1245.8,-397.29 1248.05,-402.29 1245.8,-399.79 1245.8,-402.29 1245.8,-402.29 1245.8,-402.29 1245.8,-399.79 1243.55,-402.29 1245.8,-397.29 1245.8,-397.29"/>
+<path fill="none" stroke="#ffa726" d="M960.64,-478C1054.45,-478 1245.8,-478 1245.8,-478 1245.8,-478 1245.8,-402.29 1245.8,-402.29"/>
+<polygon fill="#ffa726" stroke="#ffa726" points="1245.8,-397.29 1248.05,-402.29 1245.8,-399.79 1245.8,-402.29 1245.8,-402.29 1245.8,-402.29 1245.8,-399.79 1243.55,-402.29 1245.8,-397.29 1245.8,-397.29"/>
 </g>
 <!-- src/utils/templater/typeBuilder/relaxConstraints.ts&#45;&gt;src/utils/parseTypeDeclarations/index.ts -->
 <g id="edge82" class="edge">
